fix/SR22S-41 - fix header z-index and create variable

--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -7,6 +7,7 @@
   padding: var(--spacer-xxl) var(--spacer-5xl);
   position: sticky;
   top: 0;
+  z-index: var(--z-header);
 
   &__logo-wrapper {
     align-items: center;
